--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <main class="p-d-flex p-flex-column">
-    <oxum-login-page [enableSignInWithGoogle]="true"></oxum-login-page>
+    <oxum-login-page></oxum-login-page>
 </main>
