Fix refresh login. Keep the used logged in on refresh

--- a/projects/oxum-login-page/src/lib/oxum-login-page.component.html
+++ b/projects/oxum-login-page/src/lib/oxum-login-page.component.html
@@ -25,7 +25,7 @@
                 >
                 </button>
             </div>
-            <div class="p-inputgroup">
+            <div class="p-inputgroup" *ngIf="enableSignInWithGoogle">
                 <button
                     pButton
                     [label]="'Sign in with Google'"
